--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,4 +9,6 @@ body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
   background: #0d0d1a;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
